# gemma-with-whisper

./: .gitignore  DEV_DOC.md  README.md  conftest.py  main.py  pyproject.toml
src/: __init__.py  actions.py  gemma_classifier.py  intent_router.py  mqtt_client.py  whisper_stt.py
tests/: convert_to_pcm.py  test_actions.py  test_gemma_classifier.py  test_intent_router.py  test_mqtt_client.py  test_whisper_stt.py
