[project]
name = "gemma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.4",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]
